# pipeline.anomaly.detection.gazprom

./: MANIFEST.in  README.md  makefile  requirements.txt  setup.cfg
.github/workflows/: pep257.yml  py3.yml
pipeline_anomaly_detection_gazprom/: __init__.py
tests/docker/: test.cmd
tests/test/: __init__.py  test_init.py
