[metadata]
name = pipeline_anomaly_detection_gazprom
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Gazprom requirements for the detection threshold and accuracy of determining the size of pipeline defects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.anomaly.detection.gazprom
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.anomaly.detection.gazprom/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_anomaly_detection_gazprom
